# internal/handlers/v1/course_handler.go
@@ -324,6 +324,7 @@ func (h *CourseHandler) List(c *gin.Context) {
 			"categorias":             curso.Categorias,
 			"acessibilidades":        curso.Acessibilidades,
 			"accessibility":          curso.Accessibility,
+			"is_visible":             curso.IsVisible,
 			"custom_fields":          curso.CustomFields,
 			"locations":              curso.LocationClasses,
 			"remote_class":           curso.RemoteClass,
@@ -452,6 +453,7 @@ func (h *CourseHandler) ListDrafts(c *gin.Context) {
 			"categorias":             curso.Categorias,
 			"acessibilidades":        curso.Acessibilidades,
 			"accessibility":          curso.Accessibility,
+			"is_visible":             curso.IsVisible,
 			"custom_fields":          curso.CustomFields,
 			"locations":              curso.LocationClasses,
 			"remote_class":           curso.RemoteClass,
@@ -662,6 +664,7 @@ func (h *CourseHandler) ListByUser(c *gin.Context) {
 			"categorias":             curso.Categorias,
 			"acessibilidades":        curso.Acessibilidades,
 			"accessibility":          curso.Accessibility,
+			"is_visible":             curso.IsVisible,
 			"custom_fields":          curso.CustomFields,
 			"locations":              curso.LocationClasses,
 			"remote_class":           curso.RemoteClass,
